<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name">Hacker\'s Keyboard</string>
    <string name="english_ime_settings">Settings for Hacker\'s Keyboard</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="title_keyboard_view_settings">Keyboard view settings</string>
    <string name="title_keyboard_height_portrait">Keyboard height, portrait</string>
    <string name="title_keyboard_height_landscape">Keyboard height, landscape</string>
    <string name="title_key_layout_options">Key layout options</string>
    <string name="title_key_behavior_settings">Key behavior settings</string>
    <string name="title_long_press_alternate_keys">Long-press alternate keys</string>
    <string name="title_suggested_punctuation">Suggested punctuation</string>
    <string name="title_input_mode_settings">Input mode settings</string>
    <string name="title_debugging">Debugging</string>
    <string name="title_input_connection_details">Input connection details</string>
    <string name="title_version">Version</string>
    <string name="title_swipe_gestures">Swipe gestures (experimental)</string>
    <string name="title_hardware_key_actions">Hardware key actions</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="prefs_settings_key">Show settings key</string>
    <string-array name="settings_key_modes_values" translatable="false">
        <item>@string/settings_key_mode_auto</item>
        <item>@string/settings_key_mode_always_show</item>
        <item>@string/settings_key_mode_always_hide</item>
    </string-array>
    <string name="settings_key_mode_auto_name">Automatic</string>
    <string name="settings_key_mode_always_show_name">Always show</string>
    <string name="settings_key_mode_always_hide_name">Always hide</string>
    <string-array name="settings_key_modes">
        <item>@string/settings_key_mode_auto_name</item>
        <item>@string/settings_key_mode_always_show_name</item>
        <item>@string/settings_key_mode_always_hide_name</item>
    </string-array>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="voice_input">Voice input</string>
    <string-array name="voice_input_modes">
        <item>On main keyboard</item>
        <item>On symbols keyboard</item>
        <item>Off</item>
    </string-array>
    <string name="voice_mode_main" translatable="false">0</string>
    <string name="voice_mode_symbols" translatable="false">1</string>
    <string name="voice_mode_off"  translatable="false">2</string>
    <string-array name="voice_input_modes_values" translatable="false">
        <item>@string/voice_mode_main</item>
        <item>@string/voice_mode_symbols</item>
        <item>@string/voice_mode_off</item>
    </string-array>
    <string-array name="voice_input_modes_summary">
        <item>Mic on main keyboard</item>
        <item>Mic on symbols keyboard</item>
        <item>Voice input is disabled</item>
    </string-array>
    <string name="popular_domain_1">".net"</string>
    <string name="popular_domain_2">".org"</string>
    <string name="popular_domain_3">".gov"</string>
    <string name="popular_domain_4">".edu"</string>
    <string name="selectInputMethod">Select input method</string>
    <string name="language_selection_title">Input languages</string>
    <string name="language_selection_summary">Slide finger on spacebar to change language</string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="prefs_enable_recorrection">Touch to correct words</string>
    <string name="prefs_enable_recorrection_summary">Touch entered words to correct them</string>
    <string name="pref_screen_feedback_title">Key feedback settings</string>
    <string name="pref_screen_feedback_title_summary">Configure key sound, vibrate, preview popup etc.</string>
    <string name="pref_screen_view_title">Theme and label settings</string>
    <string name="pref_screen_view_title_summary">Configure theming and label display</string>
    <string name="keyboard_layout">Keyboard Theme</string>
    <string name="layout_stone_bold">Stone (bold)</string>
    <string name="layout_gingerbread">Gingerbread</string>
    <string name="layout_ics">Ice Cream Sandwich (bright hints)</string>
    <string name="layout_ics_darker">Ice Cream Sandwich (dark hints)</string>
    <string name="layout_trans_neon">Transparent (experimental)</string>
	<string name="layout_material_black">Material Black</string>
    <string name="layout_material_dark">Material Dark</string>
    <string name="layout_material_light">Material Light</string>
    <string-array name="keyboard_layout_modes" translatable="false">
        <item>@string/layout_ics</item>
        <item>@string/layout_ics_darker</item>
		<item>@string/layout_material_black</item>
        <item>@string/layout_material_dark</item>
        <item>@string/layout_material_light</item>
        <item>@string/layout_gingerbread</item>
        <item>@string/layout_stone_bold</item>
        <item>@string/layout_trans_neon</item>
    </string-array>
    <string-array name="keyboard_layout_modes_values" translatable="false">
        <item>0</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>7</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_keyboard_mode_portrait">Keyboard mode, portrait</string>
    <string name="title_keyboard_mode_landscape">Keyboard mode, landscape</string>
    <string-array name="keyboard_mode_entries">
        <item>4-row Gingerbread layout</item>
        <item>5-row compact layout (US QWERTY only!)</item>
        <item>Full 5-row layout</item>
    </string-array>
    <string-array name="keyboard_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_ctrl_a_override">Ctrl-A (select all) override</string>
    <string name="toast_ctrl_a_override_info">Ctrl-A is disabled. Use Ctrl-Alt-A instead, or enable it in settings.</string>
    <string name="default_ctrl_a_override">0</string>
    <string-array name="ctrl_a_override_entries">
        <item>Disable Ctrl-A, use Ctrl-Alt-A instead</item>
        <item>Disable Ctrl-A completely</item>
        <item>Use Ctrl-A (no override)</item>
    </string-array>
    <string-array name="ctrl_a_override_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_chording_ctrl_key">Ctrl key code</string>
    <string name="default_chording_ctrl_key">0</string>
    <string-array name="chording_ctrl_key_entries">
        <item>None (ignored when not modifying other keys)</item>
        <item>Left Ctrl</item>
        <item>Right Ctrl</item>
    </string-array>
    <string-array name="chording_ctrl_key_values">
        <item>0</item>
        <item>113</item>
        <item>114</item>
    </string-array>
    <string name="title_chording_alt_key">Alt key code</string>
    <string name="default_chording_alt_key">0</string>
    <string-array name="chording_alt_key_entries">
        <item>None (ignored when not modifying other keys)</item>
        <item>Left Alt</item>
        <item>Right Alt</item>
    </string-array>
    <string-array name="chording_alt_key_values">
        <item>0</item>
        <item>57</item>
        <item>58</item>
    </string-array>
    <string name="title_chording_meta_key">Meta key code</string>
    <string name="default_chording_meta_key">0</string>
    <string-array name="chording_meta_key_entries">
        <item>None (ignored when not modifying other keys)</item>
        <item>Left Meta</item>
        <item>Right Meta</item>
    </string-array>
    <string-array name="chording_meta_key_values">
        <item>0</item>
        <item>117</item>
        <item>118</item>
    </string-array>
    <string name="title_suggestions_in_landscape">Suggestions in landscape mode</string>
    <string name="summary_suggestions_in_landscape_true">Same as in portrait mode</string>
    <string name="summary_suggestions_in_landscape_false">Hide suggestions in landscape mode</string>
    <string name="title_fullscreen_override">Landscape mode fullscreen editor</string>
    <string name="summary_fullscreen_override_true">Disabled, use standard view</string>
    <string name="summary_fullscreen_override_false">Enabled on small devices</string>
    <string name="title_force_keyboard_on">Show soft keyboard</string>
    <string name="summary_force_keyboard_on_true">Always</string>
    <string name="summary_force_keyboard_on_false">When no hardware keyboard is available</string>
    <string name="title_keyboard_notification">Use permanent notification</string>
    <string name="summary_keyboard_notification_true">Activate the keyboard by tapping the notification</string>
    <string name="summary_keyboard_notification_false">No notification</string>
    <string name="title_application_category">Application-specific settings</string>
    <string name="title_connectbot_tab_hack">ConnectBot tab key mode</string>
    <string name="summary_connectbot_tab_hack_true">Enable compatibility workaround</string>
    <string name="summary_connectbot_tab_hack_false">Send plain Tab key event</string>
    <string name="title_caps_lock">Double-tap Shift mode</string>
    <string name="summary_caps_lock_true">Caps Lock (q1 => Q1)</string>
    <string name="summary_caps_lock_false">Shift Lock (q1 => Q!)</string>
    <string name="title_shift_lock_modifiers">Apply Shift Lock to modifier keys?</string>
    <string name="summary_shift_lock_modifiers_true">Yes, including arrow keys</string>
    <string name="summary_shift_lock_modifiers_false">No, normal keys only</string>
    <string name="title_hint_mode">Labeled alternate keys</string>
    <string-array name="hint_modes">
        <item>Hide hint labels</item>
        <item>Show ASCII punctuation</item>
        <item>Show all hint labels</item>
    </string-array>
    <string-array name="hint_modes_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="default_hint_mode">1</string>
    <string name="title_touch_pos">Debug touch screen position</string>
    <string name="summary_touch_pos_true">Show feedback for touch screen location</string>
    <string name="main_setup_configure_imes">Enable keyboard</string>
    <string name="main_setup_set_ime">Set input method</string>
    <string name="main_setup_get_dicts">More</string>
    <string name="main_setup_input_lang">Input languages</string>
    <string name="main_setup_settings">Settings</string>
    <string name="main_setup_test">Test</string>
</resources>